--- a/mobile/index/view/buy/order.html
+++ b/mobile/index/view/buy/order.html
@@ -93,7 +93,7 @@
                     </figcaption>
                 </figure>
                 <div class="gt_d_classes_des show12" style="display: none">
-                    <h6><a href="#">{$v['o_gname']}</a></h6>
+                    <h6><a href="{:url('/detail',['cid'=>$v.o_cid,'gid'=>$v.o_gid])}">{$v['o_gname']}</a></h6>
                     <ul>
                         <li>
                             <ul class="gt_rating_star">
