--- a/mobile/index/view/buy/personal1.html
+++ b/mobile/index/view/buy/personal1.html
@@ -65,11 +65,18 @@
                   <div data-am-widget="list_news" class="am-list-news am-list-news-default am-no-layout">
                     <div class="am-list-news-bd">
                       <ul class="am-list">
+                          <!--<li class="am-g am-list-item-desced am-list-item-thumbed am-list-item-thumb-left pet_list_one_block">-->
+                              <!--<a href="{:url('index/Personal/favorite')}" >我的收藏</a>-->
+                          <!--</li>-->
+
                           <li class="am-g am-list-item-desced am-list-item-thumbed am-list-item-thumb-left pet_list_one_block">
-                              <a href="{:url('index/Personal/favorite')}" >我的收藏</a>
+                              <a href="{:url('index/Personal/hotel')}" >我的住宿</a>
                           </li>
                           <li class="am-g am-list-item-desced am-list-item-thumbed am-list-item-thumb-left pet_list_one_block">
                               <a href="{:url('index/Personal/order')}" >我的订单</a>
+                          </li>
+                          <li class="am-g am-list-item-desced am-list-item-thumbed am-list-item-thumb-left pet_list_one_block">
+                              <a href="{:url('index/Personal/comment')}" >我的评论</a>
                           </li>
                           <li class="am-g am-list-item-desced am-list-item-thumbed am-list-item-thumb-left pet_list_one_block">
                               <a href="{:url('index/Personal/coupon')}">我的优惠券({$mnu})</a>
@@ -85,7 +92,7 @@
                               <a href="{:url('index/Personal/adress')}" >收货地址管理</a>
                           </li>
                           <li class="am-g am-list-item-desced am-list-item-thumbed am-list-item-thumb-left pet_list_one_block">
-                              <a href="{:url('index/index/logout')}" >安全退出</a>
+                              <a href="{:url('index/Login/outLogin')}" >安全退出</a>
                           </li>
                       </ul>
                     </div>
