--- a/mobile/index/view/index/index.html
+++ b/mobile/index/view/index/index.html
@@ -91,12 +91,13 @@
     </li>
     <li class="active-menu">
         <a href="{:url('/')}"><i class="fa fa-home"></i>首页<i class="fa fa-circle"></i></a></li>
-    <li>
+    <!--<li>-->
 
-        <a class="has-submenu" href="{:url('index/Personal/index')}"><i class="fa fa-camera"></i>个人中心<i class="fa fa-plus"></i></a>
+        <!--<a class="submenu" href="{:url('index/Personal/index')}"><i class="fa fa-camera"></i>个人中心<i class="fa fa-plus"></i></a>-->
 
 
-    </li>
+    <!--</li>-->
+    <li><a href="{:url('index/Personal/index')}"><i class="fa fa-camera"></i>个人中心<i class="fa fa-circle"></i></a></li>
 
     <li>
 
@@ -112,7 +113,7 @@
 
 
 
-    <li><a href="contact.html"><i class="fa fa-envelope-o"></i>购物车<i class="fa fa-circle"></i></a></li>
+    <li><a href="{:url('index/Cart/showindex')}"><i class="fa fa-envelope-o"></i>购物车<i class="fa fa-circle"></i></a></li>
 
     <li><a class="close-menu" href="#"><i class="fa fa-times"></i>退出<i class="fa fa-circle"></i></a></li>
 
