--- a/application/index/view/index/hotelorder.html
+++ b/application/index/view/index/hotelorder.html
@@ -33,7 +33,7 @@
                                     <li>
 
                                         <div class="gt_contact_des">
-                                            <a href="index/hotel/ordertrue" class="btn btn-success"><font color="white">确认支付</font></a>
+                                            <a href="{:url('/weixinplay')}" class="btn btn-success"><font color="white">确认支付</font></a>
                                         </div>
                                     </li>
                                     <li>
