--- a/application/index/view/index/login-register.html
+++ b/application/index/view/index/login-register.html
@@ -47,7 +47,7 @@
                   <div class="gt_login_field">
                     <p>——————————其他方式登录——————————</p>
                     <ul class="gt_scl_icon">
-                      <li><a class="bg_fb" href="#"><i class="fa fa-qq"></i></a></li>
+                      <li><a class="bg_fb" href="https://graph.qq.com/oauth2.0/authorize?response_type=code&client_id=101416221&redirect_uri=http://qqlong.top/qqlogin"><i class="fa fa-qq"></i></a></li>
                     </ul>
                   </div>
                 </div>
