--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -187,92 +187,68 @@
             padding: 15px 0px;
         }
 
+
+        .gt_login_field input[name="u_phone"] {
+            width: 70%;
+            height: 45px;
+            border-radius: 50px;
+            background-color: #4d4d4d;
+            padding: 8px 10px 8px 60px;
+            color: #f2f2f2;
+            margin-bottom: 15px;
+        }
+
+        .gt_login_field input[name="vcode"] {
+            width: 60%;
+            height: 45px;
+            border-radius: 50px;
+            background-color: #4d4d4d;
+            padding: 8px 10px 8px 60px;
+            color: #f2f2f2;
+            margin-bottom: 15px;
+        }
+
+        #msmbtn{
+            width: 100%;
+            padding: 11px 0px;
+            border-radius: 59px;
+            text-align: center;
+            color: #ffffff;
+            margin-bottom: 15px;
+        }
+
+        .gt_login_field input[type="password"] {
+            width: 100%;
+            height: 45px;
+            border-radius: 50px;
+            background-color: #4d4d4d;
+            padding: 8px 10px 8px 60px;
+            color: #f2f2f2;
+            margin-bottom: 15px;
+        }
+
+
+
+
     </style>
 
 
-    <!--{css href="/static/app/index/css/reset.css"}-->
-    <!--{css href="/static/app/index/css/dashboard.css"}-->
-    <!--{css href="/static/app/index/css/city-picker.css" rel="stylesheet" type="text/css"}-->
-    <!--{!--三级地址联动--}-->
-    <!--{css href="/static/app/index/css/jquery.city.css" rel="stylesheet" type="text/css"}-->
-    <!--{css href="/static/app/index/css/animate.min.css" rel="stylesheet" type="text/css"}-->
-    <!--{css href="/static/app/index/css/jquery.city.bootstrap.css" rel="stylesheet" type="text/css"}-->
+    {css href="/static/app/index/css/reset.css"}
+    {css href="/static/app/index/css/dashboard.css"}
+    {css href="/static/app/index/css/city-picker.css" rel="stylesheet" type="text/css"}
+    <!--{!&#45;&#45;三级地址联动&#45;&#45;}-->
+    {css href="/static/app/index/css/jquery.city.css" rel="stylesheet" type="text/css"}
+    {css href="/static/app/index/css/animate.min.css" rel="stylesheet" type="text/css"}
+    {css href="/static/app/index/css/jquery.city.bootstrap.css" rel="stylesheet" type="text/css"}
     <!--{css href="/static/app/index/css/bootstrap.css" rel="stylesheet" type="text/css"}-->
     <!--加减按钮插件-->
-    <!--{css href="/static/app/index/css/bootstrap-spinner.css" rel="stylesheet" type="text/css"}-->
+    {css href="/static/app/index/css/bootstrap-spinner.css" rel="stylesheet" type="text/css"}
 
     <!--end-yjf-->
 </head>
 <body>
-<!--yjf-->
- <!-- 会员登录注册 Modal -->
-<!-- Middle modal -->
-<!--<div class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="myMiddleModalLabel">-->
-  <!--<div class="modal-dialog modal-md" role="document">-->
-    <!--<div class="modal-content">-->
-<!--&lt;!&ndash;模态框中的内容&ndash;&gt;-->
-<!--<div style="z-index:999">-->
-  <!--<div class="login_cont">-->
-    <!--<div class="login_nav">-->
-      <!--<div class="nav_slider">-->
-        <!--<a href="#" class="signup focus">注册</a>-->
-        <!--<a href="#" class="signin">登录</a>-->
-      <!--</div>-->
-    <!--</div>-->
 
 
-    <!--<style type="text/css">-->
-
-      <!--.gt_login_field input[name="u_phone"] {-->
-        <!--width: 70%;-->
-        <!--height: 45px;-->
-        <!--border-radius: 50px;-->
-        <!--background-color: #4d4d4d;-->
-        <!--padding: 8px 10px 8px 60px;-->
-        <!--color: #f2f2f2;-->
-        <!--margin-bottom: 15px;-->
-        <!--}-->
-
-        <!--.gt_login_field input[name="vcode"] {-->
-        <!--width: 60%;-->
-        <!--height: 45px;-->
-        <!--border-radius: 50px;-->
-        <!--background-color: #4d4d4d;-->
-        <!--padding: 8px 10px 8px 60px;-->
-        <!--color: #f2f2f2;-->
-        <!--margin-bottom: 15px;-->
-        <!--}-->
-
-        <!--#msmbtn{-->
-        <!--width: 100%;-->
-        <!--padding: 11px 0px;-->
-        <!--border-radius: 59px;-->
-        <!--text-align: center;-->
-        <!--color: #ffffff;-->
-        <!--margin-bottom: 15px;-->
-        <!--}-->
-
-        <!--.gt_login_field input[type="password"] {-->
-        <!--width: 100%;-->
-        <!--height: 45px;-->
-        <!--border-radius: 50px;-->
-        <!--background-color: #4d4d4d;-->
-        <!--padding: 8px 10px 8px 60px;-->
-        <!--color: #f2f2f2;-->
-        <!--margin-bottom: 15px;-->
-    <!--}-->
-
-    <!--</style>-->
-
-
-    <!--{css href="/static/app/index/css/reset.css"}-->
-    <!--{css href="/static/app/index/css/dashboard.css"}-->
-    <!--{css href="/static/app/index/css/city-picker.css" rel="stylesheet" type="text/css"}-->
-    <!--&lt;!&ndash;{!&#45;&#45;三级地址联动&#45;&#45;}&ndash;&gt;-->
-    <!--&lt;!&ndash;end-yjf&ndash;&gt;-->
-<!--</head>-->
-
-<!--<body>-->
 
   <div class="gt_wrapper">
     <!-- Header Wrap Start -->
