--- a/application/index/view/index/hotelorder.html
+++ b/application/index/view/index/hotelorder.html
@@ -39,7 +39,7 @@
                                     <li>
 
                                         <div class="gt_contact_des">
-                                            <a href="index/index/index" class="btn btn-danger"><font color="white">取消订单</font></a>
+                                            <a href="{:url('/')}" class="btn btn-danger"><font color="white">取消订单</font></a>
                                         </div>
                                     </li>
 
