--- a/application/index/view/index/shopCart.html
+++ b/application/index/view/index/shopCart.html
@@ -184,7 +184,7 @@
     function checkMsg(){
         var l = $('#addresstable tr').length;
         if(l <= 1){
-            alert('收货地址不能为空,请去个人中心添加收货地址');
+            alert('收货地址不能为空,请去个人中心->账户信息中添加收货地址');
             return false;
         }else if($(".choose").is(':checked')){
             return true;
