--- a/application/admin/view/order/unDiliver.html
+++ b/application/admin/view/order/unDiliver.html
@@ -43,8 +43,8 @@
                                 <td style="text-align: center">{$v['o_total']}</td>
                                 <td style="text-align: center">
                                         <a href="{:url('admin/busorder/showdetail',['aid'=>$v['o_uid']])}" class="btn btn-info btn-sm showUser">查看收货人信息</a>
-                                        <p style="display: none" class="oid">{$v['o_id']}</p>
-                                        <button type="button" class="btn btn-success btn-sm change">转为已发货</button>
+                                        <!--<p style="display: none" class="oid">{$v['o_id']}</p>-->
+                                        <button type="button" class="btn btn-success btn-sm change" data-id="{$v['o_id']}">转为已发货</button>
                                 </td>
                             </tr>
                             {/volist}
@@ -88,7 +88,9 @@
 
     $('.change').click(function(){
         if(confirm('您确定要将此订单转为已发货吗?')){
-            var oid = $('.oid').html();
+//            var oid = $('.oid').html();
+            var oid = $(this).attr('data-id');
+//            console.log(oid);
             dochange(oid);
         }
     });
