--- a/application/index/view/index/hotelBook.html
+++ b/application/index/view/index/hotelBook.html
@@ -101,14 +101,14 @@
                                 <div class="col-sm-offset-2 col-sm-10">
                                     <div class="checkbox">
                                         <label>
-                                            <input type="checkbox">同意提交订单即表示接受 《美丽乡村网协议》
+                                            <input type="checkbox" id="checkOrder">同意提交订单即表示接受 《美丽乡村网协议》
                                         </label>
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <div class="col-sm-offset-2 col-sm-10">
-                                    <button type="submit" class="btn btn-success">立即支付</button>
+                                    <button type="submit" class="btn btn-success">去支付</button>
                                 </div>
                             </div>
                             <br><br><br>
@@ -235,7 +235,11 @@
 //            console.log($('#shouji').val());
             alert('请填写入住人联系方式');
             return false;
-        }else{
+        }else if(!$('#checkOrder').is(':checked')){
+            alert('请同意《美丽乡村网协议》');
+            return false;
+        }
+        else{
             return true;
         }
 
