--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -187,92 +187,68 @@
             padding: 15px 0px;
         }
 
+
+        .gt_login_field input[name="u_phone"] {
+            width: 70%;
+            height: 45px;
+            border-radius: 50px;
+            background-color: #4d4d4d;
+            padding: 8px 10px 8px 60px;
+            color: #f2f2f2;
+            margin-bottom: 15px;
+        }
+
+        .gt_login_field input[name="vcode"] {
+            width: 60%;
+            height: 45px;
+            border-radius: 50px;
+            background-color: #4d4d4d;
+            padding: 8px 10px 8px 60px;
+            color: #f2f2f2;
+            margin-bottom: 15px;
+        }
+
+        #msmbtn{
+            width: 100%;
+            padding: 11px 0px;
+            border-radius: 59px;
+            text-align: center;
+            color: #ffffff;
+            margin-bottom: 15px;
+        }
+
+        .gt_login_field input[type="password"] {
+            width: 100%;
+            height: 45px;
+            border-radius: 50px;
+            background-color: #4d4d4d;
+            padding: 8px 10px 8px 60px;
+            color: #f2f2f2;
+            margin-bottom: 15px;
+        }
+
+
+
+
     </style>
 
 
-    <!--{css href="/static/app/index/css/reset.css"}-->
-    <!--{css href="/static/app/index/css/dashboard.css"}-->
-    <!--{css href="/static/app/index/css/city-picker.css" rel="stylesheet" type="text/css"}-->
-    <!--{!--三级地址联动--}-->
-    <!--{css href="/static/app/index/css/jquery.city.css" rel="stylesheet" type="text/css"}-->
-    <!--{css href="/static/app/index/css/animate.min.css" rel="stylesheet" type="text/css"}-->
-    <!--{css href="/static/app/index/css/jquery.city.bootstrap.css" rel="stylesheet" type="text/css"}-->
+    {css href="/static/app/index/css/reset.css"}
+    {css href="/static/app/index/css/dashboard.css"}
+    {css href="/static/app/index/css/city-picker.css" rel="stylesheet" type="text/css"}
+    <!--{!&#45;&#45;三级地址联动&#45;&#45;}-->
+    {css href="/static/app/index/css/jquery.city.css" rel="stylesheet" type="text/css"}
+    {css href="/static/app/index/css/animate.min.css" rel="stylesheet" type="text/css"}
+    {css href="/static/app/index/css/jquery.city.bootstrap.css" rel="stylesheet" type="text/css"}
     <!--{css href="/static/app/index/css/bootstrap.css" rel="stylesheet" type="text/css"}-->
     <!--加减按钮插件-->
-    <!--{css href="/static/app/index/css/bootstrap-spinner.css" rel="stylesheet" type="text/css"}-->
+    {css href="/static/app/index/css/bootstrap-spinner.css" rel="stylesheet" type="text/css"}
 
     <!--end-yjf-->
 </head>
 <body>
-<!--yjf-->
- <!-- 会员登录注册 Modal -->
-<!-- Middle modal -->
-<!--<div class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="myMiddleModalLabel">-->
-  <!--<div class="modal-dialog modal-md" role="document">-->
-    <!--<div class="modal-content">-->
-<!--&lt;!&ndash;模态框中的内容&ndash;&gt;-->
-<!--<div style="z-index:999">-->
-  <!--<div class="login_cont">-->
-    <!--<div class="login_nav">-->
-      <!--<div class="nav_slider">-->
-        <!--<a href="#" class="signup focus">注册</a>-->
-        <!--<a href="#" class="signin">登录</a>-->
-      <!--</div>-->
-    <!--</div>-->
 
 
-    <!--<style type="text/css">-->
-
-      <!--.gt_login_field input[name="u_phone"] {-->
-        <!--width: 70%;-->
-        <!--height: 45px;-->
-        <!--border-radius: 50px;-->
-        <!--background-color: #4d4d4d;-->
-        <!--padding: 8px 10px 8px 60px;-->
-        <!--color: #f2f2f2;-->
-        <!--margin-bottom: 15px;-->
-        <!--}-->
-
-        <!--.gt_login_field input[name="vcode"] {-->
-        <!--width: 60%;-->
-        <!--height: 45px;-->
-        <!--border-radius: 50px;-->
-        <!--background-color: #4d4d4d;-->
-        <!--padding: 8px 10px 8px 60px;-->
-        <!--color: #f2f2f2;-->
-        <!--margin-bottom: 15px;-->
-        <!--}-->
-
-        <!--#msmbtn{-->
-        <!--width: 100%;-->
-        <!--padding: 11px 0px;-->
-        <!--border-radius: 59px;-->
-        <!--text-align: center;-->
-        <!--color: #ffffff;-->
-        <!--margin-bottom: 15px;-->
-        <!--}-->
-
-        <!--.gt_login_field input[type="password"] {-->
-        <!--width: 100%;-->
-        <!--height: 45px;-->
-        <!--border-radius: 50px;-->
-        <!--background-color: #4d4d4d;-->
-        <!--padding: 8px 10px 8px 60px;-->
-        <!--color: #f2f2f2;-->
-        <!--margin-bottom: 15px;-->
-    <!--}-->
-
-    <!--</style>-->
-
-
-    <!--{css href="/static/app/index/css/reset.css"}-->
-    <!--{css href="/static/app/index/css/dashboard.css"}-->
-    <!--{css href="/static/app/index/css/city-picker.css" rel="stylesheet" type="text/css"}-->
-    <!--&lt;!&ndash;{!&#45;&#45;三级地址联动&#45;&#45;}&ndash;&gt;-->
-    <!--&lt;!&ndash;end-yjf&ndash;&gt;-->
-<!--</head>-->
-
-<!--<body>-->
 
   <div class="gt_wrapper">
     <!-- Header Wrap Start -->
@@ -360,7 +336,7 @@
                                           <input type="text" class="form-control" id="inputEmail" name="b_email" placeholder="请输入您的邮箱">
 
                                           <p id='p9' style="padding-left: 15px"></p>
-                                          <button style="display: inline-block;width: 100px" class="btn-default btn-sm btn_email">获取验证码</button>
+                                          <button type='button' style="display: inline-block;width: 100px" class="btn-default btn-sm btn_email">获取验证码</button>
                                       </div>
                                   </div>
                                   <!--</form>-->
@@ -1200,6 +1176,12 @@
 //        });
 
     //}
+    $('.btn_email').click(function(){
+        vemail=document.getElementById("inputEmail").value;
+        //console.log(vemail);
+        emailAjax(vemail);
+        //return false;
+    });
     //ajax请求发送邮箱验证码 传递参数为邮箱地址EMAIL
     function emailAjax(email){
         $.ajax({
@@ -1354,12 +1336,7 @@
         } else {
             p9.style.color = '#0a0';
             p9.innerHTML = '√ ';
-            $('.btn_email').click(function(){
-                vemail=document.getElementById("inputEmail").value;
-                //console.log(vemail);
-                emailAjax(vemail);
-                return false;
-            });
+
         }
 
         //验证码
