--- a/application/index/view/index/list.html
+++ b/application/index/view/index/list.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="gt_breadcrumb_wrap default_width">
                 <ul>
-                    <li><a href="index/index/index">Home</a></li>
+                    <li><a href="index/index/index">首页</a></li>
                     <li><a href="#">详情</a></li>
                 </ul>
             </div>
@@ -105,7 +105,7 @@
 
                         <div class="gt_blog_listing default_width mb30">
                             <figure>
-                                <img src="/uploads/{$list.pic}" alt="">
+                                <img src="/uploads/{$list.pic}" alt="" style="width: 300px;height: 225px;">
                                 <figcaption class="gt_gallery_style1_des">
                                     <ul>
                                         <li><a href="{:url('/goodsdetail',['id'=>$list.id,'bus_id'=>$list.bus_id,'cid'=>$list.c_id])}"><i class="fa fa-link"></i></a></li>
