--- a/application/index/view/index/personal.html
+++ b/application/index/view/index/personal.html
@@ -140,7 +140,7 @@
               </div>
               <div class="gt-usser-account-list">
                 <ul>
-                  <li class="active"><a href="javascript:void(0);" id="showInformation"><i class="fa fa-user-circle-o gt-color glyphicon glyphicon-user"></i>基本信息</a></li>
+                  <li class="active"><a href="javascript:void(0);" id="showInformation"><i class="glyphicon glyphicon-user"></i>基本信息</a></li>
                   <li><a href="javascript:void(0);" id="showPersonal"><i class="glyphicon glyphicon-th-list"></i>账户信息</a></li>
                   <li><a href="javascript:void(0);" id="showOrder"><i class="icon-book gt-color"></i>我的订单</a></li>
                   <li><a href="javascript:void(0);" id="showHotel"><i class="glyphicon glyphicon-home"></i>我的住宿</a></li>
@@ -223,25 +223,30 @@
                                         <button type="button" class="btn btn-info" id="showCoupon">我的优惠券</button>
                                         <br>
                                         <div class="mt20" style="display: none" id="coupon">
-                                            {volist name="money" id="m"}
-                                            <nobr style="width: 700px;">
-                                                <span style="float: left;">
-                                                    <img src="/static/app/index/images/money/10.png" style="width: 100px;"> X {$m['m_ten']}
-                                                </span>
-                                                <span style="">
-                                                    <img src="/static/app/index/images/money/20.png" style="width: 100px;"> X {$m['m_twenty']}
-                                                </span>
-                                            </nobr>
-                                            <br>
-                                            <nobr class="mt20">
-                                                <span style="float: left;">
-                                                <img src="/static/app/index/images/money/50.png" style="width: 100px;"> X {$m['m_fifty']}
-                                                </span>
-                                                    <span style="">
-                                                <img src="/static/app/index/images/money/100.png" style="width: 100px;"> X {$m['m_hundred']}
-                                                    </span>
-                                            </nobr>
-                                            {/volist}
+                                            <div class="" style="float: left;width: 140px;">
+                                                <img src="/static/app/index/images/money/10.png" style="width: 100px;">
+                                            </div>
+                                            <div class="" style="float: left;text-align: center;line-height: 48px;padding-rignt:20px">
+                                                X {$money['m_ten']}
+                                            </div>
+                                            <div class="" style="float: left;width: 140px;margin-left: 43px">
+                                                <img src="/static/app/index/images/money/20.png" style="width: 100px;">
+                                            </div>
+                                            <div class="" style="float: left;text-align: center;line-height: 48px;padding-rignt:20px">
+                                                X {$money['m_twenty']}
+                                            </div>
+                                            <div class="mt20" style="float: left;width: 140px;">
+                                                <img src="/static/app/index/images/money/50.png" style="width: 100px;">
+                                            </div>
+                                            <div class="mt20" style="float: left;text-align: center;line-height: 48px;padding-rignt:20px">
+                                                X {$money['m_fifty']}
+                                            </div>
+                                            <div class="mt20" style="float: left;width: 140px;margin-left: 43px">
+                                                <img src="/static/app/index/images/money/100.png" style="width: 100px;">
+                                            </div>
+                                            <div class="mt20" style="float: left;text-align: center;line-height: 48px;padding-rignt:20px">
+                                                X {$money['m_hundred']}
+                                            </div>
                                         </div>
                                 </li>
                             </ul>
@@ -572,13 +577,10 @@
                                       </ul>
                                   </li>
                                   <li>{$v['o_time']}</li>
-                              </ul>
-<<<<<<< HEAD
-=======
+
                               <p>
                                   <!--评论...........-->
                               </p>
->>>>>>> origin/darcy
                           </div>
                           {/volist}
                           <!--</div>-->
@@ -630,12 +632,10 @@
                                   </li>
                                   <li>{$v['o_time']}</li>
                               </ul>
-<<<<<<< HEAD
-=======
+
                               <p>
                                   <!--评论...........-->
                               </p>
->>>>>>> origin/darcy
                           </div>
                           {/volist}
                       </div>
@@ -645,34 +645,34 @@
           </div>
             <!--住宿,hotel-->
             <div class="col-md-8" id="hotel" style="display: none;background-color: white">
-                <div class="row">
-                    <table class="table table-striped">
+                <div class="row" style="margin-left: 10px;margin-right: 10px">
+                    <table class="table table-striped mt20">
                         <caption style="text-align: center"><h3>订单详情</h3></caption>
                         <tr>
                             <th style="text-align: center">下单时间<br>订单号</th>
                             <!--<th style="text-align: center;width: 50px;"></th>-->
-                            <th style="text-align: center">商品</th>
-                            <th style="text-align: center">单价(元)</th>
-                            <th style="text-align: center">数量</th>
-                            <th style="text-align: center">总金额(元)</th>
-                            <th style="text-align: center;width: 150px;">入住时间</th>
+                            <th style="text-align: center;line-height: 40px;width: 109px;">商品</th>
+                            <th style="text-align: center;line-height: 40px">单价(元)</th>
+                            <th style="text-align: center;line-height: 40px">数量</th>
+                            <th style="text-align: center;line-height: 40px">总金额(元)</th>
+                            <th style="text-align: center;line-height: 40px;width: 100px;">入住时间</th>
                             <!--<th style="text-align: center">入住人</th>-->
                             <!--<th style="text-align: center">联系方式</th>-->
-                            <th style="text-align: center">状态</th>
+                            <th style="text-align: center;line-height: 40px">状态</th>
                             <!--<th style="text-align: center" class="col-sm-1">操作</th>-->
                         </tr>
                         {volist name="hotels" id="v"}
                         <tr >
-                            <td style="text-align: center">{$v['o_time']}<br>{$v['o_order_num']}</td>
+                            <td style="text-align: center;line-height: 29px">{$v['o_time']}<br>{$v['o_order_num']}</td>
                             <!--<td style="text-align: center;width: 50px;">{$v['o_order_num']}</td>-->
-                            <td style="text-align: center">{$v['o_gname']}</td>
-                            <td style="text-align: center">{$v['o_price']}</td>
-                            <td style="text-align: center">{$v['o_num']}</td>
-                            <td style="text-align: center">{$v['o_total']}</td>
-                            <td style="text-align: center">{$v['intime']}</td>
+                            <td style="text-align: center;line-height: 29px">{$v['o_gname']}</td>
+                            <td style="text-align: center;line-height: 54px">{$v['o_price']}</td>
+                            <td style="text-align: center;line-height: 54px">{$v['o_num']}</td>
+                            <td style="text-align: center;line-height: 54px">{$v['o_total']}</td>
+                            <td style="text-align: center;line-height: 18px">{$v['intime']}</td>
                             <!--<td style="text-align: center">{$v['inname']}</td>-->
                             <!--<td style="text-align: center">{$v['inphone']}</td>-->
-                            <td style="text-align: center">
+                            <td style="text-align: center;line-height: 54px">
                                 {if condition="$v['o_status'] eq 0"}未入住
                                 {else}已入住
                                 {/if}
@@ -1039,7 +1039,6 @@
             url: "/money",
             data: {
                 "id":id,
-//                    "pass":text,
                 "type":type,
                 "n":n,
                 "total":total
@@ -1051,7 +1050,7 @@
                     alert('优惠券兑换成功');
                     history.go(0);
                 }else{
-                    alert('优惠券兑换失败,请重试');
+                    alert('优惠券兑换失败,请重试~');
                 }
             },
             error:function(){
@@ -1078,7 +1077,7 @@
     });
     //        验证手机
     $('#phone').change(function(){
-        if ($('#phone').val().match(/^(13[0-9]|14[5|7]|15[0|1|2|3|5|6|7|8|9]|18[0|1|2|3|5|6|7|8|9])\d{8}$/) == null){
+        if ($('#phone').val().match(/^1(3|4|5|7|8)[0-9]\d{8}$/) == null){
             $('#tips2').html('手机格式不正确~');
             $('#tips2').css('color','#f00');
         }else{
@@ -1332,8 +1331,7 @@
         }
     }
 
-<<<<<<< HEAD
-=======
+
 //    修改个人信息发送短信验证码
     $('#sendCode').click(function(){
         n = 30;
@@ -1390,7 +1388,7 @@
             console.log(data);
         }
     });
->>>>>>> origin/darcy
+
 
 </script>
 <!--Custom JavaScript-->
