--- a/mobile/index/view/index/showRegister.html
+++ b/mobile/index/view/index/showRegister.html
@@ -136,7 +136,7 @@
             if($('#phone').val() == ''){
                 $('#tips2').css('color', '#f00');
                 $('#tips2').text('手机号不能为空');
-            } else if ($('#phone').val().match(/^(13[0-9]|14[5|7]|15[0|1|2|3|5|6|7|8|9]|18[0|1|2|3|5|6|7|8|9])\d{8}$/) == null){
+            } else if ($('#phone').val().match(/^1(3|4|5|7|8)[0-9]\d{8}$/) == null){
                 $('#tips2').css('color', '#f00');
                 $('#tips2').text('手机格式不正确')
             }else{
@@ -198,7 +198,7 @@
                 type:'get',
                 url:'/sendmsg/'+phone,
                 success:function(data){
-                    console.log(data);
+//                    console.log(data);
                     if(data['status']){
                         $('#code').text(data['string']);
                         alert('短信验证码发送成功');
@@ -222,7 +222,7 @@
 <script>
     function checkMsg(){
         var incode = $('#incode').val();
-        console.log(incode);
+//        console.log(incode);
         if($('#username').val() == ''){
             alert('用户名不能为空');
             return false;
@@ -238,7 +238,7 @@
         }else if(incode == ''){
             alert('请进行短信验证');
             return false;
-        }else if(incode != $('code').text()){
+        }else if(incode != $('#code').text()){
             alert('验证码不正确,请重试');
             return false;
         }else{
