--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -61,7 +61,7 @@
             padding-left: 10px;
             line-height: 30px;
             display: none;
-            z-index:10000;
+            z-index:10001;
             border-radius: 5px;
             /*background-color:rgba(193,219,203,0.2);*/
         }
@@ -75,7 +75,7 @@
             padding-left: 10px;
             line-height: 30px;
             display: none;
-            z-index:10000;
+            z-index:10001;
             border-radius: 5px;
             background-color:rgba(193,219,203,0.2);
         }
@@ -87,6 +87,7 @@
             height: 60px;
             text-align: center;
             line-height: 30px;
+            z-index:10001;
             /*background-color: #2DCC70;*/
         }
         .qrcode {
@@ -98,6 +99,7 @@
             text-align: center;
             line-height: 40px;
             background-color: #2DCC70;
+            z-index:10001;
         }
 
         #chat {
@@ -1131,7 +1133,7 @@
             <button class="btn-success" id="cwheather" style="width:60px">查天气</button>
         </div>
         <div class="qrcode">
-            <img src="" alt="">二维码
+            <img src="/static/app/index/images/qr.jpg" alt="微信公众号" width="60px" height="60px">
         </div>
         <div class="back-to-top">
             <a href="#home">Top</a>
