--- a/application/index/view/index/list.html
+++ b/application/index/view/index/list.html
@@ -181,4 +181,7 @@
 <script src="/static/app/index/js/jquery.prettyPhoto.js"></script>
 <!--Custom JavaScript-->
 <script src="/static/app/index/js/custom.js"></script>
+<script>
+
+</script>
 {/block}
