--- a/application/index/view/index/sceneryDetail.html
+++ b/application/index/view/index/sceneryDetail.html
@@ -139,8 +139,7 @@
           									<button type="submit" class="btn btn-success" id="tijiao">添加到购物车</button>
                     </form>
           									<a href="{:url('/')}"class="btn btn-success btn-lg">再去逛逛</a>
-                    <a href="http://m.amap.com/navi/?dest=116.470098,39.992838&amp;destName=阜通西&amp;hideRouteIcon=1&amp;key=66cee5cb6497418036929923b2466419" class="btn btn-info btn-lg">在哪儿</a>
-                    <button type="button" id="getxy">获取坐标</button>
+                    <a href="{:url('/map', ['area'=>$area])}" class="btn btn-info btn-lg">在哪儿</a>
           								</div>
                       </div>
 
